--- a/Weather.html
+++ b/Weather.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-        <p><a href="">Open-Sourced</a> by Laura</p>
+        <footer><a href="https://github.com/LauraIF/Project-Test">Open-Sourced</a> by Laura</footer>
     </div>
     <script src="scr/Weather.js"></script>
 </body>
