--- a/Weather.html
+++ b/Weather.html
@@ -12,7 +12,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/16b037978f.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link href="scr/Weather.css" rel="stylesheet" type="text/css" />
+    <link href="Weather.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -110,7 +110,7 @@
         </div>
         <footer><a href="https://github.com/LauraIF/Project-Test">Open-Sourced</a> by Laura</footer>
     </div>
-    <script src="scr/Weather.js"></script>
+    <script src="Weather.js"></script>
 </body>
 
 </html>
