--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="row">
 
             <div class="col-7">
-                <h1><i class="fas fa-map-marker-alt"></i> Lisbon</h1>
+                <h1><i class="fas fa-map-marker-alt"></i> </h1>
                 <h2></h2>
                 <h3></h3>
-                <p class="emoji"><i class="fas fa-sun"></i></p>
+                <p class="emoji"> <img src=""  /> </p>
             </div>
 
             <div class="col">
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-8">
                 <div class="temp">
-                    <span class="temperature"> 25</span> <span class="units"> <a href="#" id="celsiusLink">ºC |</a><a
+                    <span class="temperature"> </span> <span class="units"> <a href="#" id="celsiusLink">ºC |</a><a
                             href="#" id="fahrenheitLink">ºF</a> </span>
                 </div>
             </div>
